--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,7 @@
+```yaml
+title: "Quantum Many-Body Systems"
+description: "Numerical simulations of strongly correlated quantum systems."
 theme: jekyll-theme-slate
+
+kramdown:
+  math_engine: mathjax
